# dde-cooperation

./: .gitignore  .gitmodules  CMakeLists.txt  install_dconfig.cmake  meson.build
src/: CMakeLists.txt  common.h  data-transfer-translate.sh  dde-cooperation-translate.sh  main.cc  main.cpp  meson.build  translate_ts2desktop.sh
src/apps/: CMakeLists.txt  config.h.in  version.rc.in
src/apps/daemon/: CMakeLists.txt  main.cpp
src/apps/data-transfer/: CMakeLists.txt  main.cpp  resources.qrc  singleapplication.cpp  singleapplication.h  type_defines.h
src/apps/dde-cooperation/: CMakeLists.txt  main.cpp  mainwindow.qml  resources.qrc
src/apps/dde-cooperation-transfer/: CMakeLists.txt  commandparser.cpp  commandparser.h  main.cpp  singleapplication.cpp  singleapplication.h
src/apps/deamon/: CMakeLists.txt  main.cpp
src/base/: baseutils.cpp  baseutils.h
src/common/: commonstruct.h  commonstruct.proto  commonutils.cpp  commonutils.h  comonstruct.h  comonstruct.proto  constant.h  ipcaction.h  ipcwraper.cpp  ipcwraper.h  rpcwraper.cpp  rpcwraper.h
src/config/: configmanager.cpp  settings.cpp
src/daemon/: meson.build
src/daemon/dbus/: Interface.cc  Interface.h  Method.cc  Object.cc  Property.cc  Property.h  Service.cc  Service.h  Signal.cc  dbus.h
src/daemon/dde-cooperation-daemon/: Cooperation.cc  Cooperation.h  InputDevice.cc  InputDevice.h  InputEvent.cc  InputEvent.h  KeyPair.cc  KeyPair.h  Machine.cc  Machine.h  Request.cc  Request.h  main.cc  meson.build
src/daemon/dde-cooperation-user/: DisplayServer.cc  DisplayServer.h  EdgeDetector.cc  EdgeDetector.h  FuseClient.cc  FuseClient.h  FuseServer.cc  FuseServer.h  Manager.cc  Manager.h  main.cc  meson.build
src/daemon/protocol/: cooperation.proto  fs.proto  input_event.proto  message.proto  pair.proto  remote_display.proto
src/daemon/utils/: message.h  message_helper.h  ptr.h
src/daemon/uvxx/: Async.cc  Handle.h  Loop.cc  Poll.h  Stream.h  TCP.cc  UvType.h
src/dbus/: Interface.cc  Interface.cpp  Interface.h  Method.cc  Method.cpp  Method.h  Object.cc  Object.cpp  Object.h  Property.cc  Property.cpp  Property.h  Service.cc  Service.cpp  Service.h  Signal.cc  Signal.h  dbus.h
src/dde-cooperation/: Backend.cc  Backend.h  ClipboardBase.cc  ClipboardBase.h  ConfirmDialog.cc  ConfirmDialog.h  Cooperation.cc  Cooperation.h  Device.h  DisplayBase.cc  DisplayBase.h  InputDevice.cc  KeyPair.cc  KeyPair.h  Machine.cc  Machine.h  MachineModel.cc  MachineModel.h  Manager.cc  Manager.h  ManagerDBusAdaptor.cc  ManagerDBusAdaptor.h  ReceiveTransfer.cc  ReceiveTransfer.h  ReconnectDialog.cc  ReconnectDialog.h  SendTransfer.cc  SendTransfer.h  config.h.in  main.cc  meson.build
src/dde-cooperation-agent/: Agent.cc  Agent.h  EdgeDetector.h  main.cc
src/dde-cooperation-agent/EdgeDetector/: X11.h
src/dde-cooperation-daemon/: AndroidMachine.cc  AndroidMachine.h  ClipboardBase.cc  ClipboardBase.h  ConfirmDialog.h  ConfirmDialogWrapper.cc  ConfirmDialogWrapper.h  DisplayBase.cc  DisplayBase.h  DisplayServer.cc  DisplayServer.h  FuseClient.cc  FuseClient.h  FuseServer.cc  FuseServer.h  InputEmittorWrapper.cc  InputEmittorWrapper.h  InputGrabberWrapper.cc  InputGrabberWrapper.h  KeyPair.cc  KeyPair.h  Machine.cc  Machine.h  Manager.cc  Manager.h  ManagerDBusAdaptor.cc  ManagerDBusAdaptor.h  PCMachine.cc  PCMachine.h  ReceiveTransfer.h  Request.cc  Request.h  SendTransfer.cc  SendTransfer.h  config.h.in  main.cc  meson.build
src/dde-cooperation-daemon/Android/: AndroidMainWindow.h  DeviceProxy.cc  QrCodeProxy.cc  VideoFrameProvider.h  resources.qrc
src/dde-cooperation-daemon/DisplayServer/: X11.h
src/dde-cooperation-daemon/Fuse/: FuseClient.cc  FuseClient.h  FuseServer.cc  FuseServer.h
src/dde-cooperation-daemon/Machine/: AndroidMachine.cc  AndroidMachine.h  AndroidMachineDBusAdaptor.h  Machine.cc  Machine.h  MachineDBusAdaptor.cc  MachineDBusAdaptor.h  PCMachine.cc  PCMachine.h
src/dde-cooperation-daemon/Wrappers/: ConfirmDialogWrapper.h  InputEmitterWrapper.cc  InputEmitterWrapper.h  InputEmittorWrapper.cc  InputEmittorWrapper.h  InputGrabberWrapper.cc  InputGrabberWrapper.h
src/dde-cooperation-daemon/X11/: Display.h  (+5 more)
src/dde-cooperation-dialog/: confirmdialog.cpp  confirmdialog.h  main.cpp  meson.build
src/dde-scrcpy/: MainWindow.cc  MainWindow.h  QrCodeWidget.cc  QrCodeWidget.h  main.cc  main.cc.bak  meson.build  qrcode.cc  resources.qrc
src/framework/: CMakeLists.txt
src/input-emitter/: InputEmitter.cc  InputEmitter.h  main.cc  meson.build
src/input-emittor/: InputEmittor.cc  InputEmittor.h  main.cc  meson.build
src/input-grabber/: InputGrabber.cc  InputGrabber.h  main.cc  meson.build
src/ipc/: backendservice.cpp  backendservice.h  bridge.h  frontendservice.cpp  frontendservice.h
src/modules/: Cooperation.cc  Cooperation.cpp  Cooperation.h  Device.cc  Device.h  FileReceiver.cc  FileReceiver.h  FileReciever.cpp  FileSender.cc  FileSender.cpp  FileSender.h  KeyPair.cc  KeyPair.h
src/plugins/: CMakeLists.txt
src/protocol/: CMakeLists.txt  base_message.pb.cc  base_message.pb.h  base_message.proto  clipboard.pb.cc  clipboard.pb.h  clipboard.proto  cooperation.proto  device_sharing.proto  file_transfer.proto  fs.proto  input_event.pb.cc  input_event.pb.h  input_event.proto  ipc_message.proto  message.pb.cc  message.pb.h  message.proto  pair.pb.cc  pair.pb.h  pair.proto  remote_display.pb.cc  remote_display.pb.h  remote_display.proto  screencast.proto  send_file.pb.cc  send_file.pb.h  send_file.proto  service_status.proto  stage.proto
src/scrcpy-core/: meson.build
src/singleton/: singleapplication.cpp  singleapplication.h
src/utils/: idxubyte.h  idxubyte.hpp  log.h  log.hpp  message.h  message.hpp  message_helper.h  net.h  net.hpp  ptr.h  sha256.cc  sha256.cpp  sha256.h
src/uvxx/: Addr.cc  Addr.h  Async.h  Buffer.cc  Buffer.h  Handle.cc  Handle.h  Loop.h  Pipe.cc  Pipe.h  Poll.cc  Poll.h  Process.cc  Process.h  Request.cc  Request.h  Signal.cc  Signal.h  Stream.cc  Stream.h  TCP.cc  TCP.h  Timer.cc  Timer.h  UDP.cc  UDP.h  UvType.h  meson.build  noncopyable.h  utils.h
src/zrpc/: CMakeLists.txt
(+564 files in other folders)
